--- a/code/UI/Vitals.scss
+++ b/code/UI/Vitals.scss
@@ -1,7 +1,6 @@
 .vitalsBack {
-    position: absolute;
-    left: 10px;
-    bottom: 10px;
+    margin-right: 0;
+    margin-left: 0;
     padding: 5px;
     background-color: #323232;
     box-shadow: 0 0 5px black;
@@ -42,38 +41,6 @@
     font-weight: bold;
 }
 
-.armorBarBack {
-    position: absolute;
-    left: 10px;
-    bottom: 40px;
-    width: 250px;
-    height: 20px;
-    background-color: black;
-}
-
-
-.armorIcon {
-    position: absolute;
-    align-self: center;
-    left: 5px;
-    color: white;
-    text-shadow: 0 0 1px black;
-    font-family: MaterialIcons;
-    font-size: 17px;
-}
-
-.armorBar {
-    background-color: blue;
-}
-
-.armorText {
-    position: absolute;
-    align-self: center;
-    right: 5px;
-    color: white;
-    text-shadow: 0 0 1px black;
-    font-weight: bold;
-}
 
 .stamBarBack {
     position: absolute;
